--- a/sample.html
+++ b/sample.html
@@ -24,6 +24,7 @@
     <h2>Activity 2 and 3 - Git Backup and Branching</h2>
     <p>Leslie Jean Rivera</p>
     <p>4-F1</p>
+    <p>Mindoro State University</p>
 
 </body>
 </html>
