Welcome to Branch 2 UPDATED

--- a/sample.html
+++ b/sample.html
@@ -25,6 +25,7 @@
     <p>Leslie Jean Rivera</p>
     <p>BSIT 4-F1</p>
     <p>Mindoro State University</p>
+    <p>Masipit, Calapan City</p>
 
 </body>
 </html>
