--- a/sample.html
+++ b/sample.html
@@ -26,6 +26,7 @@
     <p>BSIT 4-F1</p>
     <p>Mindoro State University</p>
     <p>Masipit, Calapan City</p>
+    <p>Oriental Mindoro</p>
 
 </body>
 </html>
